docs/upbound-provider-gcp/0.36/vertexai/v1beta1/featurestoreEntitytype.md
---
permalink: /upbound-provider-gcp/0.36/vertexai/v1beta1/featurestoreEntitytype/
---

# vertexai.v1beta1.featurestoreEntitytype

"FeaturestoreEntitytype is the Schema for the FeaturestoreEntitytypes API. An entity type is a type of object in a system that needs to be modeled and have stored information about."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withFeaturestore(featurestore)`](#fn-specforproviderwithfeaturestore)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withMonitoringConfig(monitoringConfig)`](#fn-specforproviderwithmonitoringconfig)
    * [`fn withMonitoringConfigMixin(monitoringConfig)`](#fn-specforproviderwithmonitoringconfigmixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`obj spec.forProvider.featurestoreRef`](#obj-specforproviderfeaturestoreref)
      * [`fn withName(name)`](#fn-specforproviderfeaturestorerefwithname)
      * [`obj spec.forProvider.featurestoreRef.policy`](#obj-specforproviderfeaturestorerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderfeaturestorerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderfeaturestorerefpolicywithresolve)
    * [`obj spec.forProvider.featurestoreSelector`](#obj-specforproviderfeaturestoreselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderfeaturestoreselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderfeaturestoreselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderfeaturestoreselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.featurestoreSelector.policy`](#obj-specforproviderfeaturestoreselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderfeaturestoreselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderfeaturestoreselectorpolicywithresolve)
    * [`obj spec.forProvider.monitoringConfig`](#obj-specforprovidermonitoringconfig)
      * [`fn withCategoricalThresholdConfig(categoricalThresholdConfig)`](#fn-specforprovidermonitoringconfigwithcategoricalthresholdconfig)
      * [`fn withCategoricalThresholdConfigMixin(categoricalThresholdConfig)`](#fn-specforprovidermonitoringconfigwithcategoricalthresholdconfigmixin)
      * [`fn withImportFeaturesAnalysis(importFeaturesAnalysis)`](#fn-specforprovidermonitoringconfigwithimportfeaturesanalysis)
      * [`fn withImportFeaturesAnalysisMixin(importFeaturesAnalysis)`](#fn-specforprovidermonitoringconfigwithimportfeaturesanalysismixin)
      * [`fn withNumericalThresholdConfig(numericalThresholdConfig)`](#fn-specforprovidermonitoringconfigwithnumericalthresholdconfig)
      * [`fn withNumericalThresholdConfigMixin(numericalThresholdConfig)`](#fn-specforprovidermonitoringconfigwithnumericalthresholdconfigmixin)
      * [`fn withSnapshotAnalysis(snapshotAnalysis)`](#fn-specforprovidermonitoringconfigwithsnapshotanalysis)
      * [`fn withSnapshotAnalysisMixin(snapshotAnalysis)`](#fn-specforprovidermonitoringconfigwithsnapshotanalysismixin)
      * [`obj spec.forProvider.monitoringConfig.categoricalThresholdConfig`](#obj-specforprovidermonitoringconfigcategoricalthresholdconfig)
        * [`fn withValue(value)`](#fn-specforprovidermonitoringconfigcategoricalthresholdconfigwithvalue)
      * [`obj spec.forProvider.monitoringConfig.importFeaturesAnalysis`](#obj-specforprovidermonitoringconfigimportfeaturesanalysis)
        * [`fn withAnomalyDetectionBaseline(anomalyDetectionBaseline)`](#fn-specforprovidermonitoringconfigimportfeaturesanalysiswithanomalydetectionbaseline)
        * [`fn withState(state)`](#fn-specforprovidermonitoringconfigimportfeaturesanalysiswithstate)
      * [`obj spec.forProvider.monitoringConfig.numericalThresholdConfig`](#obj-specforprovidermonitoringconfignumericalthresholdconfig)
        * [`fn withValue(value)`](#fn-specforprovidermonitoringconfignumericalthresholdconfigwithvalue)
      * [`obj spec.forProvider.monitoringConfig.snapshotAnalysis`](#obj-specforprovidermonitoringconfigsnapshotanalysis)
        * [`fn withDisabled(disabled)`](#fn-specforprovidermonitoringconfigsnapshotanalysiswithdisabled)
        * [`fn withMonitoringIntervalDays(monitoringIntervalDays)`](#fn-specforprovidermonitoringconfigsnapshotanalysiswithmonitoringintervaldays)
        * [`fn withStalenessDays(stalenessDays)`](#fn-specforprovidermonitoringconfigsnapshotanalysiswithstalenessdays)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withMonitoringConfig(monitoringConfig)`](#fn-specinitproviderwithmonitoringconfig)
    * [`fn withMonitoringConfigMixin(monitoringConfig)`](#fn-specinitproviderwithmonitoringconfigmixin)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`obj spec.initProvider.monitoringConfig`](#obj-specinitprovidermonitoringconfig)
      * [`fn withCategoricalThresholdConfig(categoricalThresholdConfig)`](#fn-specinitprovidermonitoringconfigwithcategoricalthresholdconfig)
      * [`fn withCategoricalThresholdConfigMixin(categoricalThresholdConfig)`](#fn-specinitprovidermonitoringconfigwithcategoricalthresholdconfigmixin)
      * [`fn withImportFeaturesAnalysis(importFeaturesAnalysis)`](#fn-specinitprovidermonitoringconfigwithimportfeaturesanalysis)
      * [`fn withImportFeaturesAnalysisMixin(importFeaturesAnalysis)`](#fn-specinitprovidermonitoringconfigwithimportfeaturesanalysismixin)
      * [`fn withNumericalThresholdConfig(numericalThresholdConfig)`](#fn-specinitprovidermonitoringconfigwithnumericalthresholdconfig)
      * [`fn withNumericalThresholdConfigMixin(numericalThresholdConfig)`](#fn-specinitprovidermonitoringconfigwithnumericalthresholdconfigmixin)
      * [`fn withSnapshotAnalysis(snapshotAnalysis)`](#fn-specinitprovidermonitoringconfigwithsnapshotanalysis)
      * [`fn withSnapshotAnalysisMixin(snapshotAnalysis)`](#fn-specinitprovidermonitoringconfigwithsnapshotanalysismixin)
      * [`obj spec.initProvider.monitoringConfig.categoricalThresholdConfig`](#obj-specinitprovidermonitoringconfigcategoricalthresholdconfig)
        * [`fn withValue(value)`](#fn-specinitprovidermonitoringconfigcategoricalthresholdconfigwithvalue)
      * [`obj spec.initProvider.monitoringConfig.importFeaturesAnalysis`](#obj-specinitprovidermonitoringconfigimportfeaturesanalysis)
        * [`fn withAnomalyDetectionBaseline(anomalyDetectionBaseline)`](#fn-specinitprovidermonitoringconfigimportfeaturesanalysiswithanomalydetectionbaseline)
        * [`fn withState(state)`](#fn-specinitprovidermonitoringconfigimportfeaturesanalysiswithstate)
      * [`obj spec.initProvider.monitoringConfig.numericalThresholdConfig`](#obj-specinitprovidermonitoringconfignumericalthresholdconfig)
        * [`fn withValue(value)`](#fn-specinitprovidermonitoringconfignumericalthresholdconfigwithvalue)
      * [`obj spec.initProvider.monitoringConfig.snapshotAnalysis`](#obj-specinitprovidermonitoringconfigsnapshotanalysis)
        * [`fn withDisabled(disabled)`](#fn-specinitprovidermonitoringconfigsnapshotanalysiswithdisabled)
        * [`fn withMonitoringIntervalDays(monitoringIntervalDays)`](#fn-specinitprovidermonitoringconfigsnapshotanalysiswithmonitoringintervaldays)
        * [`fn withStalenessDays(stalenessDays)`](#fn-specinitprovidermonitoringconfigsnapshotanalysiswithstalenessdays)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of FeaturestoreEntitytype

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"FeaturestoreEntitytypeSpec defines the desired state of FeaturestoreEntitytype"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource. This field is planned to be deprecated in favor of the ManagementPolicies field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. ManagementPolicies specify the array of actions Crossplane is allowed to take on the managed and external resources. This field is planned to replace the DeletionPolicy field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. If both are custom, the DeletionPolicy field will be ignored. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223 and this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. ManagementPolicies specify the array of actions Crossplane is allowed to take on the managed and external resources. This field is planned to replace the DeletionPolicy field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. If both are custom, the DeletionPolicy field will be ignored. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223 and this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Optional. Description of the EntityType."

### fn spec.forProvider.withFeaturestore

```ts
withFeaturestore(featurestore)
```

"The name of the Featurestore to use, in the format projects/{project}/locations/{location}/featurestores/{featurestore}."

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"A set of key/value label pairs to assign to this EntityType."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"A set of key/value label pairs to assign to this EntityType."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withMonitoringConfig

```ts
withMonitoringConfig(monitoringConfig)
```

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

### fn spec.forProvider.withMonitoringConfigMixin

```ts
withMonitoringConfigMixin(monitoringConfig)
```

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"The name of the EntityType. This value may be up to 60 characters, and valid characters are [a-z0-9_]. The first character cannot be a number."

## obj spec.forProvider.featurestoreRef

"Reference to a Featurestore in vertexai to populate featurestore."

### fn spec.forProvider.featurestoreRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.featurestoreRef.policy

"Policies for referencing."

### fn spec.forProvider.featurestoreRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.featurestoreRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.featurestoreSelector

"Selector for a Featurestore in vertexai to populate featurestore."

### fn spec.forProvider.featurestoreSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.featurestoreSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.featurestoreSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.featurestoreSelector.policy

"Policies for selection."

### fn spec.forProvider.featurestoreSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.featurestoreSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.monitoringConfig

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

### fn spec.forProvider.monitoringConfig.withCategoricalThresholdConfig

```ts
withCategoricalThresholdConfig(categoricalThresholdConfig)
```

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

### fn spec.forProvider.monitoringConfig.withCategoricalThresholdConfigMixin

```ts
withCategoricalThresholdConfigMixin(categoricalThresholdConfig)
```

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.monitoringConfig.withImportFeaturesAnalysis

```ts
withImportFeaturesAnalysis(importFeaturesAnalysis)
```

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.forProvider.monitoringConfig.withImportFeaturesAnalysisMixin

```ts
withImportFeaturesAnalysisMixin(importFeaturesAnalysis)
```

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.monitoringConfig.withNumericalThresholdConfig

```ts
withNumericalThresholdConfig(numericalThresholdConfig)
```

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

### fn spec.forProvider.monitoringConfig.withNumericalThresholdConfigMixin

```ts
withNumericalThresholdConfigMixin(numericalThresholdConfig)
```

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.monitoringConfig.withSnapshotAnalysis

```ts
withSnapshotAnalysis(snapshotAnalysis)
```

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.forProvider.monitoringConfig.withSnapshotAnalysisMixin

```ts
withSnapshotAnalysisMixin(snapshotAnalysis)
```

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.monitoringConfig.categoricalThresholdConfig

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

### fn spec.forProvider.monitoringConfig.categoricalThresholdConfig.withValue

```ts
withValue(value)
```

"Specify a threshold value that can trigger the alert. For numerical feature, the distribution distance is calculated by Jensen–Shannon divergence. Each feature must have a non-zero threshold if they need to be monitored. Otherwise no alert will be triggered for that feature. The default value is 0.3."

## obj spec.forProvider.monitoringConfig.importFeaturesAnalysis

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.forProvider.monitoringConfig.importFeaturesAnalysis.withAnomalyDetectionBaseline

```ts
withAnomalyDetectionBaseline(anomalyDetectionBaseline)
```

"Defines the baseline to do anomaly detection for feature values imported by each [entityTypes.importFeatureValues][] operation. The value must be one of the values below:"

### fn spec.forProvider.monitoringConfig.importFeaturesAnalysis.withState

```ts
withState(state)
```

"Whether to enable / disable / inherite default hebavior for import features analysis. The value must be one of the values below:"

## obj spec.forProvider.monitoringConfig.numericalThresholdConfig

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

### fn spec.forProvider.monitoringConfig.numericalThresholdConfig.withValue

```ts
withValue(value)
```

"Specify a threshold value that can trigger the alert. For numerical feature, the distribution distance is calculated by Jensen–Shannon divergence. Each feature must have a non-zero threshold if they need to be monitored. Otherwise no alert will be triggered for that feature. The default value is 0.3."

## obj spec.forProvider.monitoringConfig.snapshotAnalysis

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.forProvider.monitoringConfig.snapshotAnalysis.withDisabled

```ts
withDisabled(disabled)
```

"The monitoring schedule for snapshot analysis. For EntityType-level config: unset / disabled = true indicates disabled by default for Features under it; otherwise by default enable snapshot analysis monitoring with monitoringInterval for Features under it."

### fn spec.forProvider.monitoringConfig.snapshotAnalysis.withMonitoringIntervalDays

```ts
withMonitoringIntervalDays(monitoringIntervalDays)
```

"Configuration of the snapshot analysis based monitoring pipeline running interval. The value indicates number of days. The default value is 1. If both FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval_days and [FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval][] are set when creating/updating EntityTypes/Features, FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval_days will be used."

### fn spec.forProvider.monitoringConfig.snapshotAnalysis.withStalenessDays

```ts
withStalenessDays(stalenessDays)
```

"Customized export features time window for snapshot analysis. Unit is one day. The default value is 21 days. Minimum value is 1 day. Maximum value is 4000 days."

## obj spec.initProvider

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. InitProvider holds the same fields as ForProvider, with the exception of Identifier and other resource reference fields. The fields that are in InitProvider are merged into ForProvider when the resource is created. The same fields are also added to the terraform ignore_changes hook, to avoid updating them after creation. This is useful for fields that are required on creation, but we do not desire to update them after creation, for example because of an external controller is managing them, like an autoscaler."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Optional. Description of the EntityType."

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"A set of key/value label pairs to assign to this EntityType."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"A set of key/value label pairs to assign to this EntityType."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withMonitoringConfig

```ts
withMonitoringConfig(monitoringConfig)
```

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

### fn spec.initProvider.withMonitoringConfigMixin

```ts
withMonitoringConfigMixin(monitoringConfig)
```

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withName

```ts
withName(name)
```

"The name of the EntityType. This value may be up to 60 characters, and valid characters are [a-z0-9_]. The first character cannot be a number."

## obj spec.initProvider.monitoringConfig

"The default monitoring configuration for all Features under this EntityType. If this is populated with [FeaturestoreMonitoringConfig.monitoring_interval] specified, snapshot analysis monitoring is enabled. Otherwise, snapshot analysis monitoring is disabled. Structure is documented below."

### fn spec.initProvider.monitoringConfig.withCategoricalThresholdConfig

```ts
withCategoricalThresholdConfig(categoricalThresholdConfig)
```

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

### fn spec.initProvider.monitoringConfig.withCategoricalThresholdConfigMixin

```ts
withCategoricalThresholdConfigMixin(categoricalThresholdConfig)
```

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.monitoringConfig.withImportFeaturesAnalysis

```ts
withImportFeaturesAnalysis(importFeaturesAnalysis)
```

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.initProvider.monitoringConfig.withImportFeaturesAnalysisMixin

```ts
withImportFeaturesAnalysisMixin(importFeaturesAnalysis)
```

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.monitoringConfig.withNumericalThresholdConfig

```ts
withNumericalThresholdConfig(numericalThresholdConfig)
```

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

### fn spec.initProvider.monitoringConfig.withNumericalThresholdConfigMixin

```ts
withNumericalThresholdConfigMixin(numericalThresholdConfig)
```

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.monitoringConfig.withSnapshotAnalysis

```ts
withSnapshotAnalysis(snapshotAnalysis)
```

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.initProvider.monitoringConfig.withSnapshotAnalysisMixin

```ts
withSnapshotAnalysisMixin(snapshotAnalysis)
```

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.monitoringConfig.categoricalThresholdConfig

"Threshold for categorical features of anomaly detection. This is shared by all types of Featurestore Monitoring for categorical features (i.e. Features with type (Feature.ValueType) BOOL or STRING). Structure is documented below."

### fn spec.initProvider.monitoringConfig.categoricalThresholdConfig.withValue

```ts
withValue(value)
```

"Specify a threshold value that can trigger the alert. For numerical feature, the distribution distance is calculated by Jensen–Shannon divergence. Each feature must have a non-zero threshold if they need to be monitored. Otherwise no alert will be triggered for that feature. The default value is 0.3."

## obj spec.initProvider.monitoringConfig.importFeaturesAnalysis

"The config for ImportFeatures Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.initProvider.monitoringConfig.importFeaturesAnalysis.withAnomalyDetectionBaseline

```ts
withAnomalyDetectionBaseline(anomalyDetectionBaseline)
```

"Defines the baseline to do anomaly detection for feature values imported by each [entityTypes.importFeatureValues][] operation. The value must be one of the values below:"

### fn spec.initProvider.monitoringConfig.importFeaturesAnalysis.withState

```ts
withState(state)
```

"Whether to enable / disable / inherite default hebavior for import features analysis. The value must be one of the values below:"

## obj spec.initProvider.monitoringConfig.numericalThresholdConfig

"Threshold for numerical features of anomaly detection. This is shared by all objectives of Featurestore Monitoring for numerical features (i.e. Features with type (Feature.ValueType) DOUBLE or INT64). Structure is documented below."

### fn spec.initProvider.monitoringConfig.numericalThresholdConfig.withValue

```ts
withValue(value)
```

"Specify a threshold value that can trigger the alert. For numerical feature, the distribution distance is calculated by Jensen–Shannon divergence. Each feature must have a non-zero threshold if they need to be monitored. Otherwise no alert will be triggered for that feature. The default value is 0.3."

## obj spec.initProvider.monitoringConfig.snapshotAnalysis

"The config for Snapshot Analysis Based Feature Monitoring. Structure is documented below."

### fn spec.initProvider.monitoringConfig.snapshotAnalysis.withDisabled

```ts
withDisabled(disabled)
```

"The monitoring schedule for snapshot analysis. For EntityType-level config: unset / disabled = true indicates disabled by default for Features under it; otherwise by default enable snapshot analysis monitoring with monitoringInterval for Features under it."

### fn spec.initProvider.monitoringConfig.snapshotAnalysis.withMonitoringIntervalDays

```ts
withMonitoringIntervalDays(monitoringIntervalDays)
```

"Configuration of the snapshot analysis based monitoring pipeline running interval. The value indicates number of days. The default value is 1. If both FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval_days and [FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval][] are set when creating/updating EntityTypes/Features, FeaturestoreMonitoringConfig.SnapshotAnalysis.monitoring_interval_days will be used."

### fn spec.initProvider.monitoringConfig.snapshotAnalysis.withStalenessDays

```ts
withStalenessDays(stalenessDays)
```

"Customized export features time window for snapshot analysis. Unit is one day. The default value is 21 days. Minimum value is 1 day. Maximum value is 4000 days."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."